fix: example min-height & wrapping

--- a/styles.css
+++ b/styles.css
@@ -108,12 +108,13 @@ header {
 }
 
 #example-container {
-	margin: 0 auto;
+	margin: 50px auto;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
 	max-width: 880px;
 	width: 100%;
-	height: 350px;
+	gap: 1em;
 }
 
 .example {
